<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/biometricprompt_color_ffffff"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivFingerprint"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/biometricprompt_ic_finger_print" />

        <TextView
            android:id="@+id/tvTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/biometricprompt_verify_fingerprint"
            android:textColor="@color/biometricprompt_color_333333"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e7e7e8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/biometricprompt_cancel"
                android:textColor="@color/biometricprompt_color_primary"
                android:textSize="16sp" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e7e7e8" />

            <TextView
                android:id="@+id/tvUsepwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/biometricprompt_verify_usepwd"
                android:textColor="@color/biometricprompt_color_primary"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/shape_finger_check_bg">


            <ImageView
                android:id="@+id/cancel_finger_check"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:padding="14dp"
                android:src="@mipmap/zhiwenshibie_shangchutubiao" />


            <ImageView
                android:id="@+id/finger_img"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/zhiwenshibie_zhiwenwenzi" />

            <TextView
                android:id="@+id/tv_check_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/finger_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="请验证已录入指纹"
                android:textColor="#ff7f7f7f"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/error_hint_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/finger_img"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="18dp"
                android:text="请重新尝试识别"
                android:textColor="#FF5454"
                android:textSize="19sp"
                android:visibility="gone" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>