<?xml version="1.0" encoding="utf-8"?>
<com.leo.afbaselibrary.widgets.StateLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.kingyon.elevator.customview.SelfAdaptionRelativeLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="23dp"
            android:background="@mipmap/partner_zhangmuminxi"
            app:RHeightRatio="160"
            app:RWidthRatio="330">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="总收益¥"
                android:textColor="#ffffffff"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tv_all_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="47dp"
                android:text="0.00"
                android:textColor="#ffffffff"
                android:textSize="42sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="22dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_can_crash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="#ffffffff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ketixian"
                        android:textColor="#ffffffff"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_already_crash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="#ffffffff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/yitixian"
                        android:textColor="#ffffffff"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/yesterday_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="#ffffffff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/zuorishouyi"
                        android:textColor="#ffffffff"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

        </com.kingyon.elevator.customview.SelfAdaptionRelativeLayout>

        <TextView
            android:id="@+id/crash_money_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_container"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="23dp"
            android:text="提现记录"
            android:textColor="#ff1e7fab"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/btn_apply_crash"
            android:layout_width="235dp"
            android:layout_height="43dp"
            android:layout_below="@+id/card_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:background="@drawable/shape_bg_apply_crash_btn"
            android:gravity="center"
            android:text="提现申请"
            android:textColor="#ffffffff"
            android:textSize="21sp" />


        <TextView
            android:id="@+id/tv_device_manager"
            android:layout_width="235dp"
            android:layout_height="43dp"
            android:layout_below="@+id/btn_apply_crash"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_bg_device_manager_btn"
            android:gravity="center"
            android:text="设备管理"
            android:textColor="#1E7FAB"
            android:textSize="21sp" />


        <TextView
            android:id="@+id/service_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="客服热线   400-651-9299"
            android:textColor="#ff000000"
            android:textSize="13sp" />
    </RelativeLayout>
</com.leo.afbaselibrary.widgets.StateLayout>